<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".TrackingFragment" >

    <Switch
        android:id="@+id/trackingSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toggle_tracking" />


	<Switch
        android:id="@+id/messageSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trackingSwitch"
        android:text="@string/toggle_message" />
	
	<TextView
	    android:id="@+id/textAlert"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/messageSwitch"
	    android:layout_marginBottom="20dp"
	    android:layout_centerHorizontal="true"
	    android:text="@string/alert"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
	
	 <View
        android:id="@+id/lineVCentre"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_below="@id/textAlert"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray" />
	
	<LinearLayout
        android:id="@+id/linearLayoutLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAlert"
        android:layout_toLeftOf="@id/lineVCentre"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >
		
		<TextView
		    android:id="@+id/textLocation"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="@string/location" />
		
		<TextView
		    android:id="@+id/textLocationTime"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textStyle="bold"
		    android:text="@string/current" />
	
		<LinearLayout
		    android:id="@+id/linearLayout2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

		    <TextView
		        android:id="@+id/textLong"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/longitude" />

		    <TextView
		        android:id="@+id/textLongValue"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="right"
		        android:text="@string/none" />
		</LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/linearLayout3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textLat"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/latitude" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/textLatValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="right"
	            android:text="@string/none" >
	        </TextView>
	
	    </LinearLayout><LinearLayout
	        android:id="@+id/linearLayout4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textProvider"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:text="@string/provider" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/textProviderValue"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="right"
	            android:text="@string/none" >
	        </TextView>
	    </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayoutForceC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAlert"
        android:layout_toRightOf="@id/lineVCentre"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >
	    
        <TextView
		    android:id="@+id/textForces"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="@string/forces" />

        <LinearLayout
	        android:id="@+id/linearLayoutForceTime"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textDummy"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:text=" "
	            tools:ignore="HardcodedText" />

	        <TextView
	            android:id="@+id/textForceCurrent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="right"
	            android:textStyle="bold"
	            android:text="@string/current" />
	        
	         <TextView
	             android:id="@+id/textForceMax"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_weight="1"
	             android:gravity="right"
	             android:textStyle="bold"
	             android:text="@string/max" />

	    </LinearLayout>
        
	    
	    <LinearLayout
	        android:id="@+id/linearLayoutFCurX"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textXCoord"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:text="@string/xCoord" />
	

	        <TextView
	            android:id="@+id/textXCoordValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="right"
	            android:text="@string/none" />
	        
	         <TextView
	             android:id="@+id/textXCoordValueMax"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_weight="1"
	             android:gravity="right"
	             android:text="@string/none" />

	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/linearLayoutFCurY"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textYCoord"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:text="@string/yCoord" />
	
	        <TextView
	            android:id="@+id/textYCoordValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="right"
	            android:text="@string/none" />
			
			<TextView
	            android:id="@+id/textYCoordValueMax"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="right"
	            android:text="@string/none" />
	        
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/linearLayoutFCurZ"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textZCoord"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:text="@string/zCoord" />
	
	        <TextView
	            android:id="@+id/textZCoordValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="right"
	            android:text="@string/none" />
	        <TextView
	            android:id="@+id/textZCoordValueMax"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="right"
	            android:text="@string/none" />
	    </LinearLayout>
    </LinearLayout>
    
    <View
        android:id="@+id/lineH1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/linearLayoutForceC"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    
    <LinearLayout
        android:id="@+id/linearLayoutSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineH1"
        android:layout_toLeftOf="@id/lineVCentre"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >
		
		<TextView
		    android:id="@+id/textSpeed"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="@string/speed" />
		
		<TextView
		    android:id="@+id/textSpeedTime"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textStyle="bold"
		    android:text="@string/max" />

	    <TextView
	        android:id="@+id/textSpeedValue"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_weight="1"
	        android:text="@string/none"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	</LinearLayout>
    
	
</RelativeLayout>
