<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UtilitiesFragment" >

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_marginTop="4dp"
			android:background="@drawable/bg_card"
			android:orientation="vertical" >
			
			<!-- Card Contents go here -->
	
	    <Switch
	        android:id="@+id/loggingSwitch"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/toggle_logging" />
	    
	    <Switch
	        android:id="@+id/thresholdSwitch"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/toggle_threshold" />
	    
	    
</LinearLayout>
</FrameLayout>

<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_marginTop="4dp"
			android:background="@drawable/bg_card"
			android:orientation="vertical" >
			
			<!-- Card Contents go here -->
	
	      <LinearLayout
      android:id="@+id/linearLayout1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      tools:ignore="UselessParent" >

      <EditText
          android:id="@+id/editTextCautionVal"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="0.62"
          android:ems="10"
          android:hint="@string/caution_val"
          android:inputType="numberDecimal" >

      </EditText>

      <Button
          android:id="@+id/buttonSetCautionVal"
          style="?android:attr/buttonStyleSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/set" />
  </LinearLayout>
  
	      <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      tools:ignore="UselessParent" >

      <EditText
          android:id="@+id/editTextDangerVal"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="0.62"
          android:ems="10"
          android:hint="@string/danger_val"
          android:inputType="numberDecimal" >

      </EditText>

      <Button
          android:id="@+id/buttonSetDangerVal"
          style="?android:attr/buttonStyleSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/set" />
  </LinearLayout>
	    
</LinearLayout>
</FrameLayout>
	
	

</LinearLayout>